--- a/style.css
+++ b/style.css
@@ -25,9 +25,6 @@ h1 {
 
 /*STYLE*/
 .container {
-	/*margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;*/
 	margin: 10px auto;
 	width: 1250px;
 	padding: 10px;
@@ -56,7 +53,7 @@ header {
 }
 .number-of-suscribers-btn {
 	color: rgb(41, 38, 38);
-	background-color: white;
+	background-color: #eeeeee;
 	padding: 4px;
 	border: none;
 	width: 40px;
@@ -101,7 +98,7 @@ header {
 	padding: 4px;
 	border: none;
 	width: 50px;
-	border-radius: 3px;
+	border-radius: 10px;
 }
 
 .main {
@@ -136,7 +133,7 @@ header {
 }
 
 .video-description-main {
-	/*background-color: #ffffff;*/
+	background-color: #ffffff;
 	margin-top: 5px;
 	padding: 10px;
 }
@@ -173,13 +170,13 @@ header {
 }
 
 .video-description-details {
-	/*background-color: #ffffff;*/
+	background-color: #ffffff;
 	margin-top: 10px;
 	padding: 10px;
 }
 
 .video-comments {
-	/*background-color: #ffffff;*/
+	background-color: #ffffff;
 	margin-top: 10px;
 	margin-bottom: 60px;
 	padding: 10px;
@@ -189,7 +186,7 @@ header {
 }
 
 aside {
-	/*background-color: #ffffff;*/
+	background-color: #ffffff;
 	width: 340px;
 	float: right;
 	padding: 10px 15px;
