--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
-	background-color: #eeeeee;
+	background-color: #F9F9F9;
 	margin: 0;
 	padding: 0;
 }
@@ -71,7 +71,7 @@ header {
 }
 .search-nav-bar input {
 	width: 600px;
-	padding: 7px;
+	padding: 7px 10px;
 	border: 1px solid #c0c0c0;
 	border-top-left-radius: 2px;
 	border-bottom-left-radius: 2px;
@@ -86,7 +86,7 @@ header {
 }
 .nav-bar-right-buttons {
 	float: right;
-	margin: 13px 0 0px 190px;
+	margin: 13px 0 0px 180px;
 }
 .navbar-right-icons {
 	margin-left: 10px;
