--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
-	background-color: #F9F9F9;
+	background-color: #f9f9f9;
 	margin: 0;
 	padding: 0;
 }
